// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Web active 1`] = `
<a
  className="class active"
  href="/"
  onClick={[Function]}
  style={
    Object {
      "background": "#000",
      "color": "#f00",
    }
  }
  title="Test"
>
  Test
</a>
`;

exports[`Link Web inactive 1`] = `
<a
  className="class"
  href="/test"
  onClick={[Function]}
  style={
    Object {
      "background": "#000",
      "color": "#fff",
    }
  }
  title="Test"
>
  Test
</a>
`;
